src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CNPJ__c</fullName>
        <label>CNPJ</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nome__c</fullName>
        <label>Nome Fantasia</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raz_o_Social__c</fullName>
        <label>Razão Social</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TesteLoc__c</fullName>
        <label>TesteLoc</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>